--- a/segmentation-test.ipynb
+++ b/segmentation-test.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 如果没有 stanfordcorenlp 请注释下行来安装\n",
+    "# 如果没有 stanfordcorenlp 请取消注释下行来安装\n",
     "# !pip install stanfordcorenlp"
    ]
   },
