--- a/segmentation-test.ipynb
+++ b/segmentation-test.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,6 +93,24 @@
    ],
    "source": [
     "segmentation('只有这时候人才是最齐的')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stanford NLP 分词结果：光绪 辞世 时尚 没有 陵墓 ， 一直 到 1913 年 （ 民国 二年 ） 才 葬入 中国 最后 一 座 帝陵 —— 河北 易县 清 西陵 中 的 崇陵 。\n",
+      "jieba 分词结果：光绪 辞世 时尚 没有 陵墓 ， 一直 到 1913 年 （ 民国 二年 ） 才葬入 中国 最后 一座 帝陵 — — 河北 易县 清西陵 中 的 崇陵 。\n"
+     ]
+    }
+   ],
+   "source": [
+    "segmentation('光绪辞世时尚没有陵墓，一直到1913年（民国二年）才葬入中国最后一座帝陵——河北易县清西陵中的崇陵。')"
    ]
   },
   {
