--- a/segmentation-test.ipynb
+++ b/segmentation-test.ipynb
@@ -21,6 +21,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'jieba version: 0.39'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f'jieba version: {jieba.__version__}'"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -111,6 +131,24 @@
    ],
    "source": [
     "segmentation('光绪辞世时尚没有陵墓，一直到1913年（民国二年）才葬入中国最后一座帝陵——河北易县清西陵中的崇陵。')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stanford NLP 分词结果：所以 福建 人生 的 反义词 是 煮 。\n",
+      "jieba 分词结果：所以 福建 人生 的 反义词 是 煮 。\n"
+     ]
+    }
+   ],
+   "source": [
+    "segmentation('所以福建人生的反义词是煮。')"
    ]
   },
   {
