--- a/segmentation-test.ipynb
+++ b/segmentation-test.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "'jieba version: 0.39'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,10 +153,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stanford NLP 分词结果：小 米 8 旗舰 系列 发货 超 600万 台 ， 米 家 自动 洗 手机 套装 众 筹 开启\n",
+      "jieba 分词结果：小米 8 旗舰 系列 发货 超 600 万台 ， 米家 自动 洗 手机 套装 众筹 开启\n"
+     ]
+    }
+   ],
+   "source": [
+    "segmentation('小米8旗舰系列发货超600万台，米家自动洗手机套装众筹开启')"
+   ]
   }
  ],
  "metadata": {
