--- a/segmentation-test.ipynb
+++ b/segmentation-test.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,6 +185,24 @@
    ],
    "source": [
     "segmentation('据说她们平时的歌声音质不错，但如果是丧事来临，她们的嗓音就会瞬间尖锐到可以震碎玻璃。')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stanford NLP 分词结果：烧 脑 残局 ， 火热 上线\n",
+      "jieba 分词结果：烧脑 残局 ， 火热 上线\n"
+     ]
+    }
+   ],
+   "source": [
+    "segmentation('烧脑残局，火热上线')"
    ]
   },
   {
