--- a/segmentation-test.ipynb
+++ b/segmentation-test.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "'jieba version: 0.39'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,6 +203,24 @@
    ],
    "source": [
     "segmentation('烧脑残局，火热上线')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stanford NLP 分词结果：丧幼子 ， 入 佛门 。 笔下 江湖 ， 快意 恩仇 。 经历 过 非常 人 之痛 ， 书写 着 世人 心 中 江湖 。\n",
+      "jieba 分词结果：丧 幼子 ， 入 佛门 。 笔下 江湖 ， 快意 恩仇 。 经历 过 非常 人之痛 ， 书写 着 世人 心中 江湖 。\n"
+     ]
+    }
+   ],
+   "source": [
+    "segmentation('丧幼子，入佛门。笔下江湖，快意恩仇。经历过非常人之痛，书写着世人心中江湖。')"
    ]
   },
   {
