--- a/segmentation-test.ipynb
+++ b/segmentation-test.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "'jieba version: 0.39'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,6 +221,60 @@
    ],
    "source": [
     "segmentation('丧幼子，入佛门。笔下江湖，快意恩仇。经历过非常人之痛，书写着世人心中江湖。')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stanford NLP 分词结果：要求 家具 改成 龙头 ， 结果 收到 成 龙头\n",
+      "jieba 分词结果：要求 家具 改成 龙头 ， 结果 收到 成 龙头\n"
+     ]
+    }
+   ],
+   "source": [
+    "segmentation('要求家具改成龙头，结果收到成龙头')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stanford NLP 分词结果：我 也 想 过过儿 过过 的 生活\n",
+      "jieba 分词结果：我 也 想 过 过儿 过过 的 生活\n"
+     ]
+    }
+   ],
+   "source": [
+    "segmentation('我也想过过儿过过的生活')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stanford NLP 分词结果：下 周日 你 有空 吗 ？\n",
+      "jieba 分词结果：下 周日 你 有空 吗 ？\n"
+     ]
+    }
+   ],
+   "source": [
+    "segmentation('下周日你有空吗？')"
    ]
   },
   {
