--- a/segmentation-test.ipynb
+++ b/segmentation-test.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "'jieba version: 0.39'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,10 +279,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stanford NLP 分词结果：【 泪目 ！ 解放军 战士 手牵手 趟 过 中越 边境 雷场 ， 将 安全 的 土地 移交 百姓 】 11月 16日 ， 中 越 边境 云南 段 已 扫雷 场 移交 仪式 在 云南省 麻栗坡县 猛硐 乡老 山西 侧 雷场 举行 。 移交 现场 ， 扫雷 官兵 当着 老百姓 的 面 ， 手 牵 手 趟 过 雷场 ， 用 这 种 特殊 的 方式 向 老百姓 说明 脚下 的 每 一 寸 土地 都 是 安全 的 。 致敬 ！\n",
+      "jieba 分词结果：【 泪目 ！ 解放军 战士 手牵手 趟 过 中越 边境 雷场 ， 将 安全 的 土地 移交 百姓 】 11 月 16 日 ， 中 越 边境 云南 段 已 扫雷 场 移交 仪式 在 云南省 麻栗坡县 猛 硐 乡 老山 西侧 雷场 举行 。 移交 现场 ， 扫雷 官兵 当着 老百姓 的 面 ， 手牵手 趟 过 雷场 ， 用 这种 特殊 的 方式 向 老百姓 说明 脚下 的 每一寸 土地 都 是 安全 的 。 致敬 ！\n"
+     ]
+    }
+   ],
+   "source": [
+    "segmentation('【泪目！解放军战士手牵手趟过中越边境雷场，将安全的土地移交百姓】11月16日，中越边境云南段已扫雷场移交仪式在云南省麻栗坡县猛硐乡老山西侧雷场举行。移交现场，扫雷官兵当着老百姓的面，手牵手趟过雷场，用这种特殊的方式向老百姓说明脚下的每一寸土地都是安全的。致敬！')"
+   ]
   }
  ],
  "metadata": {
