--- a/segmentation-test.ipynb
+++ b/segmentation-test.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "'jieba version: 0.39'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,6 +294,31 @@
    "source": [
     "segmentation('【泪目！解放军战士手牵手趟过中越边境雷场，将安全的土地移交百姓】11月16日，中越边境云南段已扫雷场移交仪式在云南省麻栗坡县猛硐乡老山西侧雷场举行。移交现场，扫雷官兵当着老百姓的面，手牵手趟过雷场，用这种特殊的方式向老百姓说明脚下的每一寸土地都是安全的。致敬！')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stanford NLP 分词结果：笔记本 身为 X86 平台 最 能 带货 的 品类 ， Intel 和 AMD 绝不 会 忽略 掉 ， 所以 也 照例 推出 了 几 款 KabyLake-G 处理器 。\n",
+      "jieba 分词结果：笔记本 身为 X86 平台 最 能带 货 的 品类 ， Intel 和 AMD 绝不会 忽略 掉 ， 所以 也 照例 推出 了 几款 KabyLake - G 处理器 。\n"
+     ]
+    }
+   ],
+   "source": [
+    "segmentation('笔记本身为X86平台最能带货的品类，Intel和AMD绝不会忽略掉，所以也照例推出了几款KabyLake-G处理器。')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
