--- a/segmentation-test.ipynb
+++ b/segmentation-test.ipynb
@@ -315,10 +315,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stanford NLP 分词结果：人 要是 行 ， 干 一行行 一行 ， 一行行 行行行 ； 人 要是 不行 ， 干 一 行 不 行 一行 ， 一 行 不 行 行行 不行\n",
+      "jieba 分词结果：人 要是 行 ， 干 一行行 一行 ， 一行行 行行行 ； 人 要是 不行 ， 干一行 不行 一行 ， 一行 不行 行 行不行\n"
+     ]
+    }
+   ],
+   "source": [
+    "segmentation('人要是行，干一行行一行，一行行行行行；人要是不行，干一行不行一行，一行不行行行不行')"
+   ]
   }
  ],
  "metadata": {
