Add #15-17 and convert delimiter from space to slash

--- a/segmentation-test.ipynb
+++ b/segmentation-test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "'jieba version: 0.39'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,36 +60,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nlp = StanfordCoreNLP('F:\\stanford-corenlp-full-2018-02-27', lang='zh')"
+    "STANFORD_PATH = \"D:\\\\stanford-corenlp-full-2018-10-05\\\\\"\n",
+    "# STANFORD_PATH = \"F:\\\\stanford-corenlp-full-2018-02-27\\\\\"\n",
+    "nlp = StanfordCoreNLP(STANFORD_PATH, lang='zh')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def segmentation(sentence):\n",
+    "def segmentation(sentence, delimiter=\"/\"):\n",
     "    stanford = nlp.word_tokenize(sentence)\n",
     "    jieba_ = jieba.cut(sentence)\n",
-    "    print(f\"Stanford NLP 分词结果：{' '.join(stanford)}\\njieba 分词结果：{' '.join(jieba_)}\")"
+    "    print(f\"Stanford NLP 分词结果：{delimiter.join(stanford)}\\njieba 分词结果：{delimiter.join(jieba_)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stanford NLP 分词结果：【 学术 造假 爆发 】 全球 40万 科学家 在 假期 刊发 论文 ， 包括 一 位 诺奖 得主 ！\n",
-      "jieba 分词结果：【 学术 造假 爆发 】 全球 40 万 科学家 在 假期 刊发 论文 ， 包括 一位 诺 奖得主 ！\n"
+      "Stanford NLP 分词结果：【/学术/造假/爆发/】/全球/40万/科学家/在/假期/刊发/论文/，/包括/一/位/诺奖/得主/！\n",
+      "jieba 分词结果：【/学术/造假/爆发/】/全球/40/万/科学家/在/假期/刊发/论文/，/包括/一位/诺/奖得主/！\n"
      ]
     }
    ],
@@ -99,15 +101,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stanford NLP 分词结果：只有 这时候 人才 是 最 齐 的\n",
-      "jieba 分词结果：只有 这时候 人才 是 最齐 的\n"
+      "Stanford NLP 分词结果：只有/这时候/人才/是/最/齐/的\n",
+      "jieba 分词结果：只有/这时候/人才/是/最齐/的\n"
      ]
     }
    ],
@@ -117,15 +119,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stanford NLP 分词结果：光绪 辞世 时尚 没有 陵墓 ， 一直 到 1913 年 （ 民国 二年 ） 才 葬入 中国 最后 一 座 帝陵 —— 河北 易县 清 西陵 中 的 崇陵 。\n",
-      "jieba 分词结果：光绪 辞世 时尚 没有 陵墓 ， 一直 到 1913 年 （ 民国 二年 ） 才葬入 中国 最后 一座 帝陵 — — 河北 易县 清西陵 中 的 崇陵 。\n"
+      "Stanford NLP 分词结果：光绪/辞世/时尚/没有/陵墓/，/一直/到/1913/年/（/民国/二年/）/才/葬入/中国/最后/一/座/帝陵/——/河北/易县/清/西陵/中/的/崇陵/。\n",
+      "jieba 分词结果：光绪/辞世/时尚/没有/陵墓/，/一直/到/1913/年/（/民国/二年/）/才葬入/中国/最后/一座/帝陵/—/—/河北/易县/清西陵/中/的/崇陵/。\n"
      ]
     }
    ],
@@ -135,15 +137,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stanford NLP 分词结果：所以 福建 人生 的 反义词 是 煮 。\n",
-      "jieba 分词结果：所以 福建 人生 的 反义词 是 煮 。\n"
+      "Stanford NLP 分词结果：所以/福建/人生/的/反义词/是/煮/。\n",
+      "jieba 分词结果：所以/福建/人生/的/反义词/是/煮/。\n"
      ]
     }
    ],
@@ -153,15 +155,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stanford NLP 分词结果：小 米 8 旗舰 系列 发货 超 600万 台 ， 米 家 自动 洗 手机 套装 众 筹 开启\n",
-      "jieba 分词结果：小米 8 旗舰 系列 发货 超 600 万台 ， 米家 自动 洗 手机 套装 众筹 开启\n"
+      "Stanford NLP 分词结果：小/米/8/旗舰/系列/发货/超/600万/台/，/米/家/自动/洗/手机/套装/众/筹/开启\n",
+      "jieba 分词结果：小米/8/旗舰/系列/发货/超/600/万台/，/米家/自动/洗/手机/套装/众筹/开启\n"
      ]
     }
    ],
@@ -171,15 +173,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stanford NLP 分词结果：据说 她们 平时 的 歌声 音质 不错 ， 但如 果是 丧事 来临 ， 她们 的 嗓音 就 会 瞬间 尖锐 到 可以 震 碎玻璃 。\n",
-      "jieba 分词结果：据说 她们 平时 的 歌声 音质 不错 ， 但 如果 是 丧事 来临 ， 她们 的 嗓音 就 会 瞬间 尖锐 到 可以 震 碎玻璃 。\n"
+      "Stanford NLP 分词结果：据说/她们/平时/的/歌声/音质/不错/，/但如/果是/丧事/来临/，/她们/的/嗓音/就/会/瞬间/尖锐/到/可以/震/碎玻璃/。\n",
+      "jieba 分词结果：据说/她们/平时/的/歌声/音质/不错/，/但/如果/是/丧事/来临/，/她们/的/嗓音/就/会/瞬间/尖锐/到/可以/震/碎玻璃/。\n"
      ]
     }
    ],
@@ -189,15 +191,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stanford NLP 分词结果：烧 脑 残局 ， 火热 上线\n",
-      "jieba 分词结果：烧脑 残局 ， 火热 上线\n"
+      "Stanford NLP 分词结果：烧/脑/残局/，/火热/上线\n",
+      "jieba 分词结果：烧脑/残局/，/火热/上线\n"
      ]
     }
    ],
@@ -207,15 +209,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stanford NLP 分词结果：丧幼子 ， 入 佛门 。 笔下 江湖 ， 快意 恩仇 。 经历 过 非常 人 之痛 ， 书写 着 世人 心 中 江湖 。\n",
-      "jieba 分词结果：丧 幼子 ， 入 佛门 。 笔下 江湖 ， 快意 恩仇 。 经历 过 非常 人之痛 ， 书写 着 世人 心中 江湖 。\n"
+      "Stanford NLP 分词结果：丧幼子/，/入/佛门/。/笔下/江湖/，/快意/恩仇/。/经历/过/非常/人/之痛/，/书写/着/世人/心/中/江湖/。\n",
+      "jieba 分词结果：丧/幼子/，/入/佛门/。/笔下/江湖/，/快意/恩仇/。/经历/过/非常/人之痛/，/书写/着/世人/心中/江湖/。\n"
      ]
     }
    ],
@@ -225,15 +227,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stanford NLP 分词结果：要求 家具 改成 龙头 ， 结果 收到 成 龙头\n",
-      "jieba 分词结果：要求 家具 改成 龙头 ， 结果 收到 成 龙头\n"
+      "Stanford NLP 分词结果：要求/家具/改成/龙头/，/结果/收到/成/龙头\n",
+      "jieba 分词结果：要求/家具/改成/龙头/，/结果/收到/成/龙头\n"
      ]
     }
    ],
@@ -243,15 +245,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stanford NLP 分词结果：我 也 想 过过儿 过过 的 生活\n",
-      "jieba 分词结果：我 也 想 过 过儿 过过 的 生活\n"
+      "Stanford NLP 分词结果：我/也/想/过过儿/过过/的/生活\n",
+      "jieba 分词结果：我/也/想/过/过儿/过过/的/生活\n"
      ]
     }
    ],
@@ -261,15 +263,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stanford NLP 分词结果：下 周日 你 有空 吗 ？\n",
-      "jieba 分词结果：下 周日 你 有空 吗 ？\n"
+      "Stanford NLP 分词结果：下/周日/你/有空/吗/？\n",
+      "jieba 分词结果：下/周日/你/有空/吗/？\n"
      ]
     }
    ],
@@ -279,15 +281,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stanford NLP 分词结果：【 泪目 ！ 解放军 战士 手牵手 趟 过 中越 边境 雷场 ， 将 安全 的 土地 移交 百姓 】 11月 16日 ， 中 越 边境 云南 段 已 扫雷 场 移交 仪式 在 云南省 麻栗坡县 猛硐 乡老 山西 侧 雷场 举行 。 移交 现场 ， 扫雷 官兵 当着 老百姓 的 面 ， 手 牵 手 趟 过 雷场 ， 用 这 种 特殊 的 方式 向 老百姓 说明 脚下 的 每 一 寸 土地 都 是 安全 的 。 致敬 ！\n",
-      "jieba 分词结果：【 泪目 ！ 解放军 战士 手牵手 趟 过 中越 边境 雷场 ， 将 安全 的 土地 移交 百姓 】 11 月 16 日 ， 中 越 边境 云南 段 已 扫雷 场 移交 仪式 在 云南省 麻栗坡县 猛 硐 乡 老山 西侧 雷场 举行 。 移交 现场 ， 扫雷 官兵 当着 老百姓 的 面 ， 手牵手 趟 过 雷场 ， 用 这种 特殊 的 方式 向 老百姓 说明 脚下 的 每一寸 土地 都 是 安全 的 。 致敬 ！\n"
+      "Stanford NLP 分词结果：【/泪目/！/解放军/战士/手牵手/趟/过/中越/边境/雷场/，/将/安全/的/土地/移交/百姓/】/11月/16日/，/中/越/边境/云南/段/已/扫雷/场/移交/仪式/在/云南省/麻栗坡县/猛硐/乡老/山西/侧/雷场/举行/。/移交/现场/，/扫雷/官兵/当着/老百姓/的/面/，/手/牵/手/趟/过/雷场/，/用/这/种/特殊/的/方式/向/老百姓/说明/脚下/的/每/一/寸/土地/都/是/安全/的/。/致敬/！\n",
+      "jieba 分词结果：【/泪目/！/解放军/战士/手牵手/趟/过/中越/边境/雷场/，/将/安全/的/土地/移交/百姓/】/11/月/16/日/，/中/越/边境/云南/段/已/扫雷/场/移交/仪式/在/云南省/麻栗坡县/猛/硐/乡/老山/西侧/雷场/举行/。/移交/现场/，/扫雷/官兵/当着/老百姓/的/面/，/手牵手/趟/过/雷场/，/用/这种/特殊/的/方式/向/老百姓/说明/脚下/的/每一寸/土地/都/是/安全/的/。/致敬/！\n"
      ]
     }
    ],
@@ -297,15 +299,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stanford NLP 分词结果：笔记本 身为 X86 平台 最 能 带货 的 品类 ， Intel 和 AMD 绝不 会 忽略 掉 ， 所以 也 照例 推出 了 几 款 KabyLake-G 处理器 。\n",
-      "jieba 分词结果：笔记本 身为 X86 平台 最 能带 货 的 品类 ， Intel 和 AMD 绝不会 忽略 掉 ， 所以 也 照例 推出 了 几款 KabyLake - G 处理器 。\n"
+      "Stanford NLP 分词结果：笔记本/身为/X86/平台/最/能/带货/的/品类/，/Intel/和/AMD/绝不/会/忽略/掉/，/所以/也/照例/推出/了/几/款/KabyLake-G/处理器/。\n",
+      "jieba 分词结果：笔记本/身为/X86/平台/最/能带/货/的/品类/，/Intel/和/AMD/绝不会/忽略/掉/，/所以/也/照例/推出/了/几款/KabyLake/-/G/处理器/。\n"
      ]
     }
    ],
@@ -315,21 +317,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stanford NLP 分词结果：人 要是 行 ， 干 一行行 一行 ， 一行行 行行行 ； 人 要是 不行 ， 干 一 行 不 行 一行 ， 一 行 不 行 行行 不行\n",
-      "jieba 分词结果：人 要是 行 ， 干 一行行 一行 ， 一行行 行行行 ； 人 要是 不行 ， 干一行 不行 一行 ， 一行 不行 行 行不行\n"
+      "Stanford NLP 分词结果：人/要是/行/，/干/一行行/一行/，/一行行/行行行/；/人/要是/不行/，/干/一/行/不/行/一行/，/一/行/不/行/行行/不行\n",
+      "jieba 分词结果：人/要是/行/，/干/一行行/一行/，/一行行/行行行/；/人/要是/不行/，/干一行/不行/一行/，/一行/不行/行/行不行\n"
      ]
     }
    ],
    "source": [
     "segmentation('人要是行，干一行行一行，一行行行行行；人要是不行，干一行不行一行，一行不行行行不行')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stanford NLP 分词结果：另外/米/家/台灯/Pro/采用/了/DC/调光/，/无可/视频/闪/，/「/护眼/神教/」/的/教徒们/应该/心里有数/。\n",
+      "jieba 分词结果：另外/米家/台灯/ /Pro/ /采用/了/ /DC/ /调光/，/无可/视频/闪/，/「/护/眼神/教/」/的/教徒/们/应该/心里有数/。\n"
+     ]
+    }
+   ],
+   "source": [
+    "segmentation(\"另外米家台灯 Pro 采用了 DC 调光，无可视频闪，「护眼神教」的教徒们应该心里有数。\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stanford NLP 分词结果：便宜/实惠/，/方便/，/快速/，/日常/生活/用的/东西/在/京东/买/比较/好/，/京东/方便/了/生活/。/看/了/下/实物/，/质量/和/超市/一样/，/京东/的/方便/又/值/，/赞/。\n",
+      "jieba 分词结果：便宜/实惠/，/方便/，/快速/，/日常生活/用/的/东西/在/京东/买/比较/好/，/京东方/便/了/生活/。/看/了/下/实物/，/质量/和/超市/一样/，/京东/的/方便/又值/，/赞/。\n"
+     ]
+    }
+   ],
+   "source": [
+    "segmentation(\"便宜实惠，方便，快速，日常生活用的东西在京东买比较好，京东方便了生活。看了下实物，质量和超市一样，京东的方便又值，赞。\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stanford NLP 分词结果：近日/本省/部分/地区/即将/出现/连降/暴雪/，/气温/将/持续/下降/，/有可能/出现/百/年/未/遇/的/低温/寒潮/和/雪灾/。\n",
+      "jieba 分词结果：近日/本省/部分/地区/即将/出现/连降/暴雪/，/气温/将/持续/下降/，/有/可能/出现/百年/未遇/的/低温/寒潮/和/雪灾/。\n"
+     ]
+    }
+   ],
+   "source": [
+    "segmentation(\"近日本省部分地区即将出现连降暴雪，气温将持续下降，有可能出现百年未遇的低温寒潮和雪灾。\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
