--- a/segmentation-test.ipynb
+++ b/segmentation-test.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,16 +22,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'jieba version: 0.39'"
+       "'jieba version: 0.34'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,6 +385,24 @@
    ],
    "source": [
     "segmentation(\"近日本省部分地区即将出现连降暴雪，气温将持续下降，有可能出现百年未遇的低温寒潮和雪灾。\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stanford NLP 分词结果：有/个人/开发者/吗/，/想/投资/一些/项目\n",
+      "jieba 分词结果：有/个人/开发者/吗/，/想/投资/一些/项目\n"
+     ]
+    }
+   ],
+   "source": [
+    "segmentation(\"有个人开发者吗，想投资一些项目\")"
    ]
   },
   {
